fix the issue of page jumps

--- a/styles/search.css
+++ b/styles/search.css
@@ -10,6 +10,7 @@
 
 .searchBox{
     display: none;
+    margin: 0;
 }
 input[type="search"]{
     border: 0;
